--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ffcb7">  <td>21/03/19 14:41:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner.test()[pri:0, instance:Runner.Runner@57af006c]">test</td> 
-  <td>main@1922930974</td>   <td></td> </tr>
-<tr bgcolor="8ffcb7">  <td>21/03/19 14:41:06</td>   <td>-933</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Runner.testSetup()[pri:0, instance:Runner.Runner@57af006c]">&gt;&gt;testSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1922930974</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/22 14:22:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner.test()[pri:0, instance:Runner.Runner@6babf3bf]">test</td> 
+  <td>main@103103526</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/22 14:22:49</td>   <td>-981</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Runner.testSetup()[pri:0, instance:Runner.Runner@6babf3bf]">&gt;&gt;testSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@103103526</td>   <td></td> </tr>
 </table>
