--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="638071">  <td>21/03/22 14:22:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Runner.testSetup()[pri:0, instance:Runner.Runner@6babf3bf]">&gt;&gt;testSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@103103526</td>   <td></td> </tr>
-<tr bgcolor="638071">  <td>21/03/22 14:22:50</td>   <td>981</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner.test()[pri:0, instance:Runner.Runner@6babf3bf]">test</td> 
-  <td>main@103103526</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/22 14:56:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Runner.testSetup()[pri:0, instance:Runner.Runner@7ea9e1e2]">&gt;&gt;testSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1906879951</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/22 14:56:32</td>   <td>1084</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner.test()[pri:0, instance:Runner.Runner@7ea9e1e2]">test</td> 
+  <td>main@1906879951</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/22 14:56:36</td>   <td>4465</td> <td title="&lt;&lt;Runner.tearDown()[pri:0, instance:Runner.Runner@7ea9e1e2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1906879951</td>   <td></td> </tr>
 </table>
