--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="638071">  <td>21/03/22 14:56:36</td>   <td>0</td> <td title="&lt;&lt;Runner.tearDown()[pri:0, instance:Runner.Runner@7ea9e1e2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1906879951</td>   <td></td> </tr>
-<tr bgcolor="638071">  <td>21/03/22 14:56:32</td>   <td>-3381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner.test()[pri:0, instance:Runner.Runner@7ea9e1e2]">test</td> 
-  <td>main@1906879951</td>   <td></td> </tr>
-<tr bgcolor="638071">  <td>21/03/22 14:56:31</td>   <td>-4465</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Runner.testSetup()[pri:0, instance:Runner.Runner@7ea9e1e2]">&gt;&gt;testSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1906879951</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/24 10:14:08</td>   <td>0</td> <td title="&lt;&lt;Runner.tearDown()[pri:0, instance:Runner.Runner@49c7b90e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/24 10:13:58</td>   <td>-10426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner.test(java.util.List)[pri:0, instance:Runner.Runner@49c7b90e]">test</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/24 10:14:01</td>   <td>-7649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner.test(java.util.List)[pri:0, instance:Runner.Runner@49c7b90e]">test</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/24 10:14:01</td>   <td>-6984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner.test(java.util.List)[pri:0, instance:Runner.Runner@49c7b90e]">test</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/24 10:14:02</td>   <td>-5731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner.test(java.util.List)[pri:0, instance:Runner.Runner@49c7b90e]">test</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/24 10:14:03</td>   <td>-5064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner.test(java.util.List)[pri:0, instance:Runner.Runner@49c7b90e]">test</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/24 10:14:04</td>   <td>-4095</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner.test(java.util.List)[pri:0, instance:Runner.Runner@49c7b90e]">test</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/24 10:14:05</td>   <td>-3375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner.test(java.util.List)[pri:0, instance:Runner.Runner@49c7b90e]">test</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/24 10:14:05</td>   <td>-2748</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner.test(java.util.List)[pri:0, instance:Runner.Runner@49c7b90e]">test</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/24 10:14:07</td>   <td>-1323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner.test(java.util.List)[pri:0, instance:Runner.Runner@49c7b90e]">test</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/24 10:14:07</td>   <td>-692</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner.test(java.util.List)[pri:0, instance:Runner.Runner@49c7b90e]">test</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="638071">  <td>21/03/24 10:13:43</td>   <td>-24914</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Runner.testSetup()[pri:0, instance:Runner.Runner@49c7b90e]">&gt;&gt;testSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1180244251</td>   <td></td> </tr>
 </table>
