--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Training\AppData\Local\Temp\testng-eclipse--2106864922\testng-customsuite.xml</span>
+                    <span>C:\Users\Training\AppData\Local\Temp\testng-eclipse-48402782\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,27 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Runner.Runner" class="method navigator-link" hash-for-method="test([testCase.StepAPI@19593091])">test([testCase.StepAPI@19593091])</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Runner.Runner" class="method navigator-link" hash-for-method="test([testCase.StepAPI@2315052d])">test([testCase.StepAPI@2315052d])</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Runner.Runner" class="method navigator-link" hash-for-method="test([testCase.StepAPI@723742b2])">test([testCase.StepAPI@723742b2])</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Runner.Runner" class="method navigator-link" hash-for-method="test([testCase.StepAPI@656c5c3])">test([testCase.StepAPI@656c5c3])</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Runner.Runner" class="method navigator-link" hash-for-method="test([testCase.StepAPI@5f193335])">test([testCase.StepAPI@5f193335])</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Runner.Runner" class="method navigator-link" hash-for-method="test([testCase.StepAPI@27068a50])">test([testCase.StepAPI@27068a50])</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -147,42 +127,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="test([testCase.StepAPI@19593091])">
-                  </a> <!-- test([testCase.StepAPI@19593091]) -->
+                  <a name="test([testCase.StepAPI@27068a50])">
+                  </a> <!-- test([testCase.StepAPI@27068a50]) -->
                   <span class="method-name">test</span>
-                  <span class="parameters">([testCase.StepAPI@19593091])</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test([testCase.StepAPI@2315052d])">
-                  </a> <!-- test([testCase.StepAPI@2315052d]) -->
-                  <span class="method-name">test</span>
-                  <span class="parameters">([testCase.StepAPI@2315052d])</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test([testCase.StepAPI@723742b2])">
-                  </a> <!-- test([testCase.StepAPI@723742b2]) -->
-                  <span class="method-name">test</span>
-                  <span class="parameters">([testCase.StepAPI@723742b2])</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test([testCase.StepAPI@656c5c3])">
-                  </a> <!-- test([testCase.StepAPI@656c5c3]) -->
-                  <span class="method-name">test</span>
-                  <span class="parameters">([testCase.StepAPI@656c5c3])</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test([testCase.StepAPI@5f193335])">
-                  </a> <!-- test([testCase.StepAPI@5f193335]) -->
-                  <span class="method-name">test</span>
-                  <span class="parameters">([testCase.StepAPI@5f193335])</span>
+                  <span class="parameters">([testCase.StepAPI@27068a50])</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -190,7 +138,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Training\AppData\Local\Temp\testng-eclipse--2106864922\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Training\AppData\Local\Temp\testng-eclipse-48402782\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -239,32 +187,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test')
 data.setCell(0, 2, 'Runner.Runner')
-data.setCell(0, 3, 3518);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'test')
-data.setCell(1, 2, 'Runner.Runner')
-data.setCell(1, 3, 975);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'test')
-data.setCell(2, 2, 'Runner.Runner')
-data.setCell(2, 3, 718);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'test')
-data.setCell(3, 2, 'Runner.Runner')
-data.setCell(3, 3, 689);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'test')
-data.setCell(4, 2, 'Runner.Runner')
-data.setCell(4, 3, 640);
+data.setCell(0, 3, 3602);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -296,28 +228,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">test([testCase.StepAPI@19593091])</span>
-                <span class="method-start">16045 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test([testCase.StepAPI@723742b2])</span>
-                <span class="method-start">19570 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test([testCase.StepAPI@656c5c3])</span>
-                <span class="method-start">20261 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test([testCase.StepAPI@2315052d])</span>
-                <span class="method-start">21237 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test([testCase.StepAPI@5f193335])</span>
-                <span class="method-start">21878 ms</span>
+                <span class="method-name">test([testCase.StepAPI@27068a50])</span>
+                <span class="method-start">6973 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">22659 ms</span>
+                <span class="method-start">10666 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
