--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Training\AppData\Local\Temp\testng-eclipse-48402782\testng-customsuite.xml</span>
+                    <span>C:\Users\Training\AppData\Local\Temp\testng-eclipse--283567781\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Runner.Runner" class="method navigator-link" hash-for-method="test([testCase.StepAPI@27068a50])">test([testCase.StepAPI@27068a50])</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Runner.Runner" class="method navigator-link" hash-for-method="test([testCase.StepAPI@7c974942])">test([testCase.StepAPI@7c974942])</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,10 +127,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="test([testCase.StepAPI@27068a50])">
-                  </a> <!-- test([testCase.StepAPI@27068a50]) -->
+                  <a name="test([testCase.StepAPI@7c974942])">
+                  </a> <!-- test([testCase.StepAPI@7c974942]) -->
                   <span class="method-name">test</span>
-                  <span class="parameters">([testCase.StepAPI@27068a50])</span>
+                  <span class="parameters">([testCase.StepAPI@7c974942])</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -138,7 +138,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Training\AppData\Local\Temp\testng-eclipse-48402782\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Training\AppData\Local\Temp\testng-eclipse--283567781\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -191,12 +191,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test')
 data.setCell(0, 2, 'Runner.Runner')
-data.setCell(0, 3, 3602);
+data.setCell(0, 3, 5083);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -228,12 +228,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">test([testCase.StepAPI@27068a50])</span>
-                <span class="method-start">6973 ms</span>
+                <span class="method-name">test([testCase.StepAPI@7c974942])</span>
+                <span class="method-start">12939 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">10666 ms</span>
+                <span class="method-start">18119 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
